--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -83,7 +83,7 @@ flex-direction: row;
     {% for x in my_projects %}
     <div class="col-md-4 wrapper">
         <div class="img-area">
-            <div class="single-img"><img src="{{x.project_image.url}}"alt="Image" style="height: 28vh;" width="100%">
+            <div class="single-img"><img src="{{x.project_image.url}}"alt="Image" width="120%">
 </div>
     </div>
 </div>
