--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,16 +1,42 @@
 {%extends 'base.html'%} 
 {% block content %}
-<div class="container">
-  <div class="row" style="margin-top:9%">
+{% load static %}
+
+
+<style>
+   body{
+    background-image:url("https://res.cloudinary.com/auca/image/upload/v1612959584/breads_knwxbd.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: right;
+    height: 80vh;
+   }
+   h3{
+     color: white;
+   }
+</style>
+
+
+<body>
+<div class="row row-cols-1 row-cols-md-6">
   {% if project %}
-    {% for proj in project %}
-      <div class=" col-md-4">
-          <h3>{{proj.title}}</h3>
-          <img src="{{proj.project_image.url}}" width="100%"  class="img-responsive" alt="Image">
-          <p style="margin-top: 5%">{{proj.description}}</p>
-      </div>
+  {% for proj in project %}
+  
+    <div class="col-md-4 " style="padding-top: 100px;">
+      <h3>{{proj.title}}</h3>
+        <div class="card h-50">
+          
+            <img src="{{proj.project_image.url}}" class="card-img-top" alt="Image"  width="100%">
+     
+          
+             
+              <a href="{% url 'oneproject' proj.id %}" style="color: rgb(252, 252, 252); text-align: center;">Read Story..</a>
+           
+        </div>
+    </div>
     {% endfor %}
-  {% endif %}
-  </div>
+    {% endif %}
 </div>
+</body>
 {% endblock %}
